# SparkFun_ICM-20948_RaspberryLibrary

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/Advansed/: CMakeLists.txt  main.cpp
examples/Basic/: CMakeLists.txt  main.cpp
examples/DMP_Quat9/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  I2C.h  ICM_20948.cpp  ICM_20948.h
src/util/: ICM_20948_C.c  ICM_20948_C.h
